# I-AI-code

./: .gitignore  ARCHITECTURE.md  ATTRIBUTION.md  LICENSE  README.md
backend/: .env.example  ai_engine.py  internet_tools.py  main.py  parallel_runtime.py  runner.py  session_memory.py
docs/: PRIVACY.md  TECHNICAL_REPORT.md  launch-posts.md  product-hunt.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  api.js  index.css  main.jsx
frontend/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: lib.rs  main.rs
frontend/src/components/: AssistantPanel.jsx  BuildRunPanel.jsx  CodeEditor.jsx  ContextPanel.jsx  ExplanationCard.jsx  FileExplorer.jsx  InterviewMode.jsx  OmniEditCard.jsx  RepairGap.jsx  Sidebar.jsx  SplashScreen.jsx  SuggestionsPanel.jsx  SystemDesignMode.jsx  TabBar.jsx  TopBar.jsx
frontend/src/data/: interviewProblems.js  lldProblems.js
scripts/: download-model.sh  install.sh  start.sh  uninstall.sh
